fix preview overflow #sap-280 #comment

--- a/app/assets/stylesheets/pages/_wizard.sass
+++ b/app/assets/stylesheets/pages/_wizard.sass
@@ -287,3 +287,7 @@ ul.representative-preview li
 
   .review
     font-size: $font-size-medium
+
+.mobile-preview-container .tab-content
+  height: 300px
+  overflow-y: auto
